# django-whiteneuron

./: .gitignore  0.72-0.76.md  CHANGELOG.md  README.md  change.md  env.example  package-lock.json  package.json  pyproject.toml  setup.txt  styles.css  tailwind.config.js
.github/: FUNDING.yml
.github/hooks/: release-guard.json
.github/prompts/: release-notes-from-gitlog.prompt.md
.github/skills/django-unfold-upgrade/: SKILL.md
.github/skills/django-unfold-upgrade/assets/: update-report-template.md
.github/skills/django-unfold-upgrade/references/: project-hotspots.md
.github/skills/library-build-release/: SKILL.md
.github/skills/library-build-release/assets/: release-description-template.md
.github/skills/library-smoke-check/: SKILL.md
.github/skills/library-smoke-check/assets/: smoke-check-report-template.md
.github/skills/whiteneuron-professional-project-kickoff/: SKILL.md
.github/skills/whiteneuron-professional-project-kickoff/assets/: docker-bootstrap-template.md  env-example-template.env  model-admin-template.md  preflight-checklist-template.md  project-layout-template.md  scaffold-integrity-checklist.md  settings-bootstrap-template.md  settings-options-safety-guide.md  unfold-baseline-template.md  unfold-key-features-reference.md
.github/workflows/: python-publish.yml
docs/: CKEDITOR5_CUSTOMIZATION.md  GUIDE.md  INTRODUCTION.md
docs/reports/releases/: 2026-03-14-v0.2.22.md  2026-03-23-v0.2.26.md  2026-03-27-v0.2.27.md  2026-03-28-v0.2.28.md  2026-03-28-v0.2.29.md  2026-03-29-v0.2.30.md  2026-03-29-v0.2.31.md  2026-03-29-v0.2.32.md  2026-03-29-v0.2.33.md  2026-03-30-v0.2.36.md  2026-03-31-v0.2.37.md  2026-03-31-v0.2.38.md  2026-03-31-v0.2.39.md  2026-04-01-v0.2.43.md  2026-04-02-v0.2.44.md  2026-04-03-v0.2.45.md  2026-04-04-v0.2.46.md  2026-04-05-v0.2.47.md  2026-04-06-v0.2.48.1.md  2026-04-06-v0.2.48.md  2026-04-10-v0.2.48.2.md  2026-04-10-v0.2.48.3.md  2026-04-11-v0.2.48.4.md  2026-04-13-v0.3.0.1.md  2026-04-13-v0.3.0.2.md  2026-04-13-v0.3.0.md  2026-04-14-v0.3.0.3.md  2026-04-14-v0.3.0.4.md  2026-04-14-v0.3.0.5.md  2026-04-15-v0.3.1.md  2026-04-16-v0.3.1.1.md  2026-04-16-v0.3.1.2.md  2026-04-17-v0.3.1.3.md  2026-04-17-v0.3.1.4.md  2026-04-19-v0.3.1.5.md  2026-04-20-v0.3.1.6.md  2026-04-23-v0.3.1.7.md  2026-04-24-v0.3.1.8.md  2026-04-27-v0.3.2.1.md  2026-04-27-v0.3.2.md  (+21 more)
scripts/: build.sh  compilemessages.sh  makemessages.sh  makemigrations.sh  settings.py  tailwind.sh
scripts/hooks/: guard_release_worktree.sh
whiteneuron/: manage.py
whiteneuron/base/: admin.py  apps.py  asgi.py  filters.py  forms.py  middleware.py  modeladmin.py  models.py  settings.py  sites.py  tests.py  thread_local.py  urls.py  utils.py  views.py  widgets.py
whiteneuron/base/management/commands/: cleanup_old_activities.py  init_admin.py  init_guest.py  runserver_obs.py  update_visit_profiles.py
whiteneuron/base/migrations/: 0003_notification_obj_link.py  0004_delete_notification.py  0005_user_show_softdelete.py  0006_user_is_bot.py  0007_app.py  0008_app_created_at_app_created_by_app_deleted_at_and_more.py  0009_alter_app_table.py  0010_app_category.py  0011_alter_app_options.py  0012_app_permission.py  0013_app_thumbnail_url.py  0014_alter_app_created_at_alter_app_updated_at_and_more.py  0015_ipblacklist.py  0016_uablacklist.py  0017_alter_uablacklist_pattern.py  0018_user_uuid.py  0019_alter_user_uuid.py  0020_add_visit_profile_and_fk_fields.py  0021_populate_visit_profiles.py  0022_remove_duplicate_visit_profiles.py  0023_remove_useractivity_ip_address_and_more.py  0024_alter_visitprofile_user_agent_to_charfield.py  0025_alter_anonymousactivity_options_and_more.py  0026_alter_anonymousactivity_profile_and_more.py  0027_alter_anonymousactivity_method_and_more.py
whiteneuron/contrib/wn_modeltranslation/: utils.py
whiteneuron/dashboard/: apps.py  views.py
whiteneuron/feedbacks/: admin.py  apps.py  models.py  urls.py  utils.py
whiteneuron/feedbacks/migrations/: 0004_alter_feedbackdata_object_id.py  0005_feedbackdata_field.py  0006_alter_feedbackdata_created_at_and_more.py
whiteneuron/file_management/: admin.py  apps.py  models.py  urls.py  views.py
whiteneuron/file_management/migrations/: 0003_alter_excelfile_created_at_and_more.py  0004_excelfile_hash_pdffile_hash.py  0005_alter_excelfile_file_alter_excelfile_title_and_more.py
whiteneuron/notification/: admin.py  apps.py  consumers.py  models.py  utils.py  views.py
whiteneuron/notification/migrations/: 0001_initial.py  0002_alter_notificationconfig_event_type.py  0003_notification.py  0004_alter_notification_flag.py  0005_notification_keywords.py  0006_remove_notification_keywords.py  0007_notification_changed_data.py  0008_alter_notification_changed_data.py  0009_notification_action_by_alter_notification_user.py  0010_alter_notification_user.py  0011_alter_notification_user.py  0012_alter_notification_action_and_more.py
whiteneuron/synchronization/: apps.py  models.py
whiteneuron/templates/: 400.html  403.html  404.html  429.html  500.html  base.html
whiteneuron/templates/admin/: base.html  change_list.html  grid_view_results.html  header.html  index.html  login copy.html  login.html  login_after.html  search_form.html  signature.html  submit_line.html  wn_change_form.html  wn_history_panel.html
whiteneuron/templates/base/: announcement.html
(+60 files in other folders)
