[project]
name = "django-whiteneuron"
version = "0.3.4.3"
description = "A modern Django Admin extension with enhanced UI/UX, dashboard, feedback, file management, rate limiting, IP blacklisting, and advanced admin integrations built on django-unfold."
authors = [
    {name = "White Neuron", email = "anhnt@whiteneuron.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["django", "plugin", "admin", "dashboard", "whiteneuron"]
dependencies = [
    "django-debug-toolbar>=5.0.1",
    "django>=5.2.13",
    "django-celery-beat>=2.7.0",
    "django-guardian>=2.4.0",
    "django-imagekit>=5.0.0",
    "django-import-export>=4.3.3",
    "django-modeltranslation>=0.19.11",
    "django-ninja>=1.3.0",
    "django-simple-history>=3.8.0",
    "gunicorn>=23.0.0",
    "hiredis>=3.1.0",
    "markdown>=3.7",
    "openai>=1.58.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sentry-sdk==2.28.0",
    "django-browser-reload>=1.18.0",
    "whitenoise>=6.9.0",
    "django-crispy-forms>=2.4",
    "django-colorfield>=0.14.0",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "uvicorn>=0.34.3",
    "daphne>=4.2.0",
    "django-ckeditor-5>=0.2.18",
    'django-cors-headers>=4.3.0',
    "django-unfold>=0.89.0",
    "djangoql>=0.18.1",
    "cryptography>=46.0.7",
    "pyopenssl==26.0.0",
    "md2html-tailwind4"
]
requires-python = ">=3.11"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://whiteneuron.ai"
repository = "https://github.com/White-Neuron/django-whiteneuron"
changelog = "https://github.com/White-Neuron/django-whiteneuron/releases"
"Bug Tracker" = "https://github.com/White-Neuron/django-whiteneuron/issues"
"PyPI" = "https://pypi.org/project/django-whiteneuron/"

[tool.setuptools.packages.find]
where = ["."]
include = ["whiteneuron*"]

[tool.setuptools.package-data]
"whiteneuron" = [
    "templates/**/*",
    "static/**/*",
    "locale/**/*",
]

[tool.setuptools.exclude-package-data]
"whiteneuron" = [
    "templates/admin/signature_ceo.html",
]

[tool.uv.sources]
md2html-tailwind4 = { git = "https://github.com/White-Neuron/md2html-tailwind4", rev = "v1.5.0" }

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "pre-commit"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
